# taekwonhandbook-backend-

./: 404.html  LICENSE  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.html  openapi.json
architecture/: index.html
backend/: .env.example  Dockerfile  db.sqlite3  entrypoint.sh  gunicorn.conf.py
docs/: architecture.pl.md  getting-started.en.md  getting-started.pl.md  howto-billing.en.md  howto-billing.pl.md  howto-clubs.en.md  howto-clubs.pl.md  howto-deploy.prod.pl.md  howto-etag.en.md  howto-etag.pl.md  howto-filters.en.md  howto-filters.pl.md  howto-jwt.en.md  howto-jwt.pl.md  howto-media.en.md  howto-media.pl.md  howto-search.en.md  howto-search.pl.md  howto-sentry.pl.md  howto-upload.en.md  howto-upload.pl.md  index.en.md  index.pl.md  license.en.md  license.pl.md  mkdocs.public.yml  mkdocs.yml  terms.en.md  terms.pl.md
en/: index.html
getting-started/: index.html
howto-billing/: index.html
howto-clubs/: index.html
howto-deploy.prod/: index.html
howto-etag/: index.html
howto-filters/: index.html
howto-jwt/: index.html
howto-media/: index.html
howto-search/: index.html
howto-sentry/: index.html
howto-upload/: index.html
license/: index.html
memory-bank/: activeContext.md  memory_bank_instructions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nginx/: nginx.conf
overrides/: footer.html
reference/: index.html
scripts/: export_openapi.sh
(+117 files in other folders)
